# paty-pdf-to-docx

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  constants.py  exceptions.py  main.py  utils.py
src/pdf_to_docx/: dependencies.py  examples.py  exceptions.py  router.py  service.py
